--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <section class="menu">
             <div class="sesion">
                 <h2>Sesión 13</h2>
-                <input type="button" value="Reto">
+               <a href="./reto13.html" target="_blank"><input type="button" value="Reto"></a>
                 <input type="button" value="Asíncrona">
             </div>
             
